--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-pandas==2.3.3
-python-dotenv==1.2.1
-streamlit==1.51.0
+fastapi[standard]==0.126.0
+sqlmodel==0.0.27
 
 # dev dependencies
 black==25.11.0
